# Rust_OS

./: .gitignore  Cargo.toml  README.md  setup.sh
.cargo/: config.toml
docs/: blog-post.md
src/: frame_allocator.rs  gdt.rs  heap.rs  interrupts.rs  keyboard.rs  lib.rs  main.rs  memory.rs  serial.rs  shell.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs  mod.rs
src/fs/: initrd.rs  mod.rs
src/process/: context_switch.rs  mod.rs  scheduler.rs
src/syscall/: fs.rs  mod.rs  process.rs
tests/: basic_boot.rs  heap_allocation.rs  syscall_tests.rs
