[package]
name = "my_os"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
volatile = "0.2"
spin = "0.5"
x86_64 = "0.14"
uart_16550 = "0.2"
pic8259 = "0.10"
pc-keyboard = "0.7"
lazy_static = { version = "1.0", features = ["spin_no_std"] }

[dependencies.linked_list_allocator]
version = "0.9"
optional = true

[features]
default = []
alloc = ["linked_list_allocator"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none",
]
test-success-exit-code = 33

